[gd_scene load_steps=17 format=3 uid="uid://qwt0t3jcvem6"]

[ext_resource type="Script" path="res://enemys/slime/scripts/slime.gd" id="1_si871"]
[ext_resource type="Texture2D" uid="uid://dd7tteodj6wnn" path="res://pixel art/slimesheet.png" id="2_e6vem"]

[sub_resource type="AtlasTexture" id="AtlasTexture_s8mm7"]
atlas = ExtResource("2_e6vem")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_enhx8"]
atlas = ExtResource("2_e6vem")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f45wm"]
atlas = ExtResource("2_e6vem")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3bfk"]
atlas = ExtResource("2_e6vem")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dqaq"]
atlas = ExtResource("2_e6vem")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmtvs"]
atlas = ExtResource("2_e6vem")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyoih"]
atlas = ExtResource("2_e6vem")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kn3ei"]
atlas = ExtResource("2_e6vem")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x41c3"]
atlas = ExtResource("2_e6vem")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dsn4"]
atlas = ExtResource("2_e6vem")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpxiw"]
atlas = ExtResource("2_e6vem")
region = Rect2(192, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_nbf4y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8mm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_enhx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f45wm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3bfk")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dqaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmtvs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyoih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kn3ei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x41c3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dsn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpxiw")
}],
"loop": true,
"name": &"walk_right",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_g763y"]
radius = 101.124

[sub_resource type="CircleShape2D" id="CircleShape2D_yo1kb"]
radius = 5.09902

[node name="Slime" type="CharacterBody2D"]
position = Vector2(160, 90)
collision_mask = 0
script = ExtResource("1_si871")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_nbf4y")
animation = &"idle"

[node name="DetectionArea" type="Area2D" parent="."]
show_behind_parent = true
collision_layer = 2
collision_mask = 2

[node name="Collision" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_g763y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
show_behind_parent = true
shape = SubResource("CircleShape2D_yo1kb")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
